pamc/src/tests/should_fail/parse/mod.rs
use super::*;

mod empty_params;
mod illegal_underscore;
